<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Presentec PNA</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Einstellungen</string>
    <string name="pna">Personen Notsignal Anlage</string>
    <string name="powered_by">powered by</string>
    <string name="status">Status:</string>
    <string name="title_activity_log_in">Einloggen</string>
    <string name="title_activity_profile_settings">Profil-Einstellungen</string>
    <string name="title_activity_general_settings">Allg. Einstellungen</string>
    <string name="general_settings">Allg. Einstellungen</string>
    <string name="profile_settings">Profil-Einstellungen</string>
    <string name="status_log">Status Protokoll</string>
    <string name="log_in">Einloggen</string>
    <string name="log_out">Ausloggen</string>
    <string name="send_status_report">Statusmeldung senden</string>
    <string name="profile1">Profil 1 (lokal)</string>
    <string name="profile2">Profil 2 (lokal)</string>
    <string name="profile3">Profil 3 (lokal)</string>
    <string name="pna_offline">PNA ausgeschaltet</string>
    <string name="erc">Notfallzentrum</string>
    <string name="setup">Einrichten</string>
    <string name="loneworker">Alleinarbeiter Einst.</string>
    <string name="mandown">Totmannprüfungen</string>
    <string name="admin">Administration</string>
    <string name="mandown_general">Allg. Totmann Einst.</string>
    <string name="manual_alarm">Manueller Alarm</string>
    <string name="mandown_tilt">Neigungsprüfung</string>
    <string name="mandown_idle">Untätigkeitsprüfung</string>
    <string name="mandown_impact">Aufschlagsprüfung</string>
    <string name="mandown_fall">Freifallprüfung</string>
    <string name="error">Es ist ein Fehler aufgetreten!</string>
    <string name="location_send">Positionsberichte senden</string>
    <string name="profile_settings_category">Art der Profil-Einst. wählen</string>
    <string name="erc_numbers">Telefonnummern für den Notruf</string>
    <string name="sms_numbers">SMS-Nummern für den Notruf</string>
    <string name="no_number">keine Nummer hinterlegt</string>
    <string name="mandown_report_modus">Art des Totmann Berichts</string>
    <string name="limited_reports">Alle Extra-Berichte unterdrücken</string>
    <string name="on_alarm">Im Alarmfall keine weiteren Alarme senden</string>
    <string name="mandown_off_while_charging">Beim Aufladen Totmann abschalten</string>
    <string name="mandown_auto_cancel">Voralarm durch Bewegung beenden</string>
    <string name="disable_shutdown_summary">Abschaltung des Telefons verhindern</string>
    <string name="disable_shutdown">Abschaltung verhindern</string>
    <string name="more_alarm">Weitere Alarme</string>
    <string name="charging">Beim Aufladen</string>
    <string name="prealarm_cancel">Voralarm beenden</string>
    <string name="log_level">Loglevel</string>
    <string name="loglevel_min_max">Loglevel zwischen 0 und 9 wählen</string>
    <string name="log_setting">Log-Einstellung</string>
    <string name="heartbeat_interval">Heartbeat Intervall in Sekunden</string>
    <string name="sms_host">SMS Nummer für Konfigurationsnachrichten</string>
    <string name="send_via">Übertragungsweg</string>
    <string name="server_ip_adress">Server IP Adresse</string>
    <string name="location_send_interval">Intervall</string>
    <string name="location_send_intervall_alarm">Intervall im Alarmfall</string>
    <string name="location_send_mode_alarm">Übertragungsart im Alarmfall</string>
    <string name="location_source">Art der Positionsermittlung</string>
    <string name="location_send_interval_secondary">Interfall bei SMS (fallback)</string>
    <string name="location_reports">Positionsberichte</string>
    <string name="gps_update_interval">Intervall GPS Update</string>
    <string name="manual_alarm_reporting">Berichtsart im Alarmfall</string>
    <string name="alarm_button">Notruftaste</string>
    <string name="sensitivity">Empfindlichkeit</string>
    <string name="very_high">sehr hoch</string>
    <string name="high">hoch</string>
    <string name="medium">mittel</string>
    <string name="low">niedrig</string>
    <string name="very_low">sehr niedrig</string>
    <string name="timeout">Zeit bis zum Alarm</string>
    <string name="tilt_threshold">Zulässige Neigung</string>
    <string name="timeout_hight_equivalent">Zeit bis zum Alarm (Fallhöhe)</string>
    <string name="sensors_settings">Einstellungen der Sensoren</string>
    <string name="idle">Untätigkeit</string>
    <string name="tilt">Neigung</string>
    <string name="impact">Aufschlag</string>
    <string name="fall">Freifall</string>
    <string name="status_charge">Status Aufladung</string>
    <string name="local_warning_duration">Dauer der lokalen Warnung</string>
    <string name="prealarm_duration">Dauer des Voralarms</string>
    <string name="charge_status">Status der Aufladung</string>
    <string name="number1">1. Rufnummer</string>
    <string name="number2">2. Rufnummer</string>
    <string name="number3">3. Rufnummer</string>
    <string name="number4">4. Rufnummer</string>
    <string name="number5">5. Rufnummer</string>
    <string name="preferences_saved">Einstellungen gespeichert</string>
    <string name="status_reports">Statusmeldungen</string>
    <string name="report1">Statusmeldung 1</string>
    <string name="report2">Statusmeldung 2</string>
    <string name="report3">Statusmeldung 3</string>
    <string name="report4">Statusmeldung 4</string>
    <string name="report5">Statusmeldung 5</string>
    <string name="report6">Statusmeldung 6</string>
    <string name="report7">Statusmeldung 7</string>
    <string name="report8">Statusmeldung 8</string>
    <string name="report9">Statusmeldung 9</string>
    <string name="report10">Statusmeldung 10</string>
    <string name="na">n.a.</string>
    <string name="security_level">Sicherheits-Level</string>
    <string name="security_settings">Sicherheitseinstellungen</string>
    <string name="password">Passwort</string>
    <string name="show_notification">Status-Icon anzeigen</string>
    <string name="settings">Einstellungen</string>
    <string name="setup_profiles">Profile einrichten</string>
    <string name="password_required_for">Passwort erforderlich für:</string>
    <string name="activation_code">Freischaltcode</string>
    <string name="min_profile">min. erlaubtes Profil</string>
    <string name="max_profile">max. erlaubtes Profil</string>
    <string name="profile_during_call">Profil während Anruf</string>
    <string name="max10char">max. 10 Zeichen</string>
    <string name="profile_name1">Profil1 Name</string>
    <string name="profile_name2">Profil2 Name</string>
    <string name="profile_name3">Profil3 Name</string>
    <string name="enter_password">Bitte das Passwort eingeben</string>
    <string name="ok">OK</string>
    <string name="cancel">Abbrechen</string>
    <string name="login_required">Login erforderlich. Bitte Passwort eingeben.</string>
    <string name="login_successful">Login erfolgreich</string>
    <string name="wrong_pw">falsche Passwort</string>
    <string name="logout_intent">Sie sind eingeloggt. Möchten Sie sich ausloggen?</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="logged_out">Sie sind ausgeloggt</string>
    <string name="abort_login">Login abgebrochen</string>
    <string name="change_status_report">Status</string>
    <string name="choose_status_report">Welche Statusmeldung soll gesendet werden? </string>
    <string name="report_has_been_sent">Statusmeldung wurde verschickt</string>
    <string name="not_available">nicht verfügbar</string>
    <string name="status_report_sent">Statusmeldung wurde gesendet</string>
    <string name="relockin_pna">Mit anderer ID einloggen</string>
    <string name="logout_pna">Logout PNA-Modus</string>
    <string name="apply">Übernehmen</string>
    <string name="pna_modus">PNA Modus</string>
    <string name="turn_off">Ausschalten</string>
    <string name="choose_profile">Wählen Sie einen Arbeitsmodus und drücken Sie \"Übernehmen\" um diesen zu starten.</string>
    <string name="password_protection">Passwortschutz</string>
    <string name="password_for">für lokale Profile und Einstellungen</string>
    <string name="create_profile">lokales Profil erstellen</string>
    <string name="delete_profile">lokales Profil löschen</string>
    <string name="profile_name_input">gewünschten Profil-Namen eingeben</string>

</resources>
