<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="@string/status_reports" >
        <EditTextPreference
            android:key="P2StatusName0"
            android:title="@string/report1" />
        <EditTextPreference
            android:key="P2StatusName1"
            android:title="@string/report2" />
        <EditTextPreference
            android:key="P2StatusName2"
            android:title="@string/report3" />
        <EditTextPreference
            android:key="P2StatusName3"
            android:title="@string/report4" />
        <EditTextPreference
            android:key="P2StatusName4"
            android:title="@string/report5" />
                <EditTextPreference
            android:key="P2StatusName5"
            android:title="@string/report6" />
        <EditTextPreference
            android:key="P2StatusName6"
            android:title="@string/report7" />
        <EditTextPreference
            android:key="P2StatusName7"
            android:title="@string/report8" />
        <EditTextPreference
            android:key="P2StatusName8"
            android:title="@string/report9" />
        <EditTextPreference
            android:key="P2StatusName9"
            android:title="@string/report10" />
    </PreferenceCategory>

</PreferenceScreen>