<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="@string/status_reports" >
        <EditTextPreference
            android:key="P3StatusName0"
            android:title="@string/report1" />
        <EditTextPreference
            android:key="P3StatusName1"
            android:title="@string/report2" />
        <EditTextPreference
            android:key="P3StatusName2"
            android:title="@string/report3" />
        <EditTextPreference
            android:key="P3StatusName3"
            android:title="@string/report4" />
        <EditTextPreference
            android:key="P3StatusName4"
            android:title="@string/report5" />
                <EditTextPreference
            android:key="P3StatusName5"
            android:title="@string/report6" />
        <EditTextPreference
            android:key="P3StatusName6"
            android:title="@string/report7" />
        <EditTextPreference
            android:key="P3StatusName7"
            android:title="@string/report8" />
        <EditTextPreference
            android:key="P3StatusName8"
            android:title="@string/report9" />
        <EditTextPreference
            android:key="P3StatusName9"
            android:title="@string/report10" />
    </PreferenceCategory>

</PreferenceScreen>