<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="@string/setup_profiles" >
    <EditTextPreference
        android:defaultValue="@string/profile1"
        android:key="LoneWorkerProfileName1"
        android:maxLength="10"
        android:hint="@string/max10char"
        android:title="@string/profile_name1" />
    <EditTextPreference
        android:defaultValue="@string/profile2"
        android:key="LoneWorkerProfileName2"
        android:maxLength="10"
        android:hint="@string/max10char"
        android:title="@string/profile_name2" />
    <EditTextPreference
        android:defaultValue="@string/profile3"
        android:key="LoneWorkerProfileName3"
        android:maxLength="10"
        android:hint="@string/max10char"
        android:title="@string/profile_name3" />    
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/listOptionsLoneWorkerProfile"
        android:entryValues="@array/listValuesLoneWorkerProfile"
        android:key="MinMode"
        android:summary="%s"
        android:title="@string/min_profile" />
    <ListPreference
        android:defaultValue="3"
        android:entries="@array/listOptionsLoneWorkerProfile"
        android:entryValues="@array/listValuesLoneWorkerProfile"
        android:key="MaxMode"
        android:summary="%s"
        android:title="@string/max_profile" />
    <ListPreference
        android:defaultValue="3"
        android:entries="@array/listOptionsLoneWorkerProfileDuringCall"
        android:entryValues="@array/listValuesLoneWorkerProfileDuringCall"
        android:key="SetProfileDuringCall"
        android:summary="%s"
        android:title="@string/profile_during_call" />                  
    </PreferenceCategory>
</PreferenceScreen>