<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/security_settings" >
        <CheckBoxPreference
            android:key="PasswordProtection"
            android:summary="@string/password_for"
            android:defaultValue="0"
            android:title="@string/password_protection" />
        <EditTextPreference
            android:key="Password"
            android:maxLength="10"
            android:inputType="textPassword"
            android:title="@string/password" />
        <EditTextPreference
            android:key="SMSCode"
            android:title="@string/activation_code" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings" >
        <Preference
            android:fragment="SetupProfilesFragment"
            android:title="@string/setup_profiles" >
        </Preference>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="ShowNotification"
            android:title="@string/show_notification" />

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/listOptionsLogLevel"
            android:entryValues="@array/listValuesLogLevel"
            android:key="LogLevel"
            android:summary="%s"
            android:title="@string/log_level" />
    </PreferenceCategory>
    
</PreferenceScreen>