<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/loneworker" >
        <Preference
            android:fragment="MandownGeneralFragment"
            
            android:title="@string/mandown_general" >
        </Preference>
        <Preference
            android:fragment="SensorsHeaderFragment"
            android:title="@string/sensors_settings" >
        </Preference>

        <CheckBoxPreference
            android:disableDependentsState="false"
            android:defaultValue="false"
            android:key="P2LocationSend"
            android:title="@string/location_reports" />
        <CheckBoxPreference
            android:disableDependentsState="false"
            android:defaultValue="false"
            android:key="P2ManualAlarm"
            android:title="@string/alarm_button" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/mandown" >
        <CheckBoxPreference
            android:disableDependentsState="false"
            android:defaultValue="false"
            android:key="P2MandownCheckIdle"
            android:title="@string/idle" />
        <CheckBoxPreference
            android:disableDependentsState="false"
            android:defaultValue="false"
            android:key="P2MandownCheckTilt"
            android:title="@string/tilt" />
        <CheckBoxPreference
            android:disableDependentsState="false"
            android:defaultValue="false"
            android:key="P2MandownCheckImpact"
            android:title="@string/impact" />
        <CheckBoxPreference
            android:disableDependentsState="false"
            android:defaultValue="false"
            android:key="P2MandownCheckFall"
            android:title="@string/fall" />
    </PreferenceCategory>

</PreferenceScreen>