<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/loneworker" >
        <Preference
            android:fragment="MandownGeneralFragment"
            android:title="@string/mandown_general" >
        </Preference>
        <Preference
            android:fragment="SensorsHeaderFragment"
            android:title="@string/sensors_settings" >
        </Preference>

        <Preference
            android:defaultValue="true"
            android:key="P1LocationSend"
            android:fragment="LocationSendFragment"
            android:widgetLayout="@layout/toggle_button"
            android:title="@string/location_reports" />
        <CheckBoxPreference
            android:disableDependentsState="false"
            android:defaultValue="false"
            android:key="P1ManualAlarm"
            android:title="@string/alarm_button" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/mandown" >
        <CheckBoxPreference
            android:disableDependentsState="false"
            android:defaultValue="false"
            android:key="P1MandownCheckIdle"
            android:title="@string/idle" />
        <CheckBoxPreference
            android:disableDependentsState="false"
            android:defaultValue="false"
            android:key="P1MandownCheckTilt"
            android:title="@string/tilt" />
        <CheckBoxPreference
            android:disableDependentsState="false"
            android:defaultValue="false"
            android:key="P1MandownCheckImpact"
            android:title="@string/impact" />
        <CheckBoxPreference
            android:disableDependentsState="false"
            android:defaultValue="false"
            android:key="P1MandownCheckFall"
            android:title="@string/fall" />
    </PreferenceCategory>

</PreferenceScreen>