<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/sensors_settings" >
        <Preference
            android:fragment="LocationSendFragment"
            android:title="@string/location_reports" >
        </Preference>
        <Preference
            android:fragment="ManualAlarmFragment"
            android:title="@string/manual_alarm" >
        </Preference>
        <Preference
            android:fragment="MandownIdleFragment"
            android:title="@string/mandown_idle" >
        </Preference>
        <Preference
            android:fragment="MandownTiltFragment"
            android:title="@string/mandown_tilt" >
        </Preference>
        <Preference
            android:fragment="MandownImpactFragment"
            android:title="@string/mandown_impact" >
        </Preference>
        <Preference
            android:fragment="MandownFallFragment"
            android:title="@string/mandown_fall" >
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>