<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/erc_numbers" >
        <EditTextPreference
            android:inputType="phone"
            android:key="P1ERCNumber0"
            android:summary="@string/no_number"
            android:title="@string/number1" />
        <EditTextPreference
            android:inputType="phone"
            android:key="P1ERCNumber1"
            android:summary="@string/no_number"
            android:title="@string/number2" />
        <EditTextPreference
            android:inputType="phone"
            android:key="P1ERCNumber2"
            android:summary="@string/no_number"
            android:title="@string/number3" />
        <EditTextPreference
            android:inputType="phone"
            android:key="P1ERCNumber3"
            android:summary="@string/no_number"
            android:title="@string/number4" />
        <EditTextPreference
            android:inputType="phone"
            android:key="P1ERCNumber4"
            android:summary="@string/no_number"
            android:title="@string/number5" />
    </PreferenceCategory>

</PreferenceScreen>