<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/setup" >
        <EditTextPreference
            android:inputType="phone"
            android:key="P1SmsHost"
            android:title="@string/sms_host" />

        <ListPreference
            android:defaultValue="2"
            android:entries="@array/listOptionsSendVia"
            android:entryValues="@array/listValuesSendVia"
            android:key="P1SendVia"
            android:summary="%s"
            android:title="@string/send_via" />

        <EditTextPreference
            android:key="P1GprsIP"
            android:title="@string/server_ip_adress" />

        <ListPreference
            android:entries="@array/listOptionsHeartbeatIntervall"
            android:entryValues="@array/listValuesHeartbeatIntervall"
            android:defaultValue="300"
			android:summary="%s"
            android:key="P1HeartbeatInterval"
            android:title="@string/heartbeat_interval" />
    </PreferenceCategory>
</PreferenceScreen>