<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="@string/location_send" >

        <ListPreference
            android:defaultValue="120"
            android:entries="@array/listOptionsLocationSendInterval"
            android:entryValues="@array/listValuesLocationSendInterval"
            android:key="P2LocationSendInterval"
            android:summary="%s"
            android:title="@string/location_send_interval" />
        <ListPreference
            android:defaultValue="60"
            android:entries="@array/listOptionsLocationSendIntervalAlarm"
            android:entryValues="@array/listValuesLocationSendIntervalAlarm"
            android:key="P2LocationSendIntervalAlarm"
            android:summary="%s"
            android:title="@string/location_send_intervall_alarm" />
        <ListPreference
            android:defaultValue="120"
            android:entries="@array/listOptionsLocationSendInterval"
            android:entryValues="@array/listValuesLocationSendInterval"
            android:key="P2LocationSendIntervalSecondary"
            android:summary="%s"
            android:title="@string/location_send_interval_secondary" />
        <ListPreference
            android:defaultValue="3"
            android:entries="@array/listOptionsLocationSendModeAlarm"
            android:entryValues="@array/listValuesLocationSendModeAlarm"
            android:key="P2LocationSendModeAlarm"
            android:summary="%s"
            android:title="@string/location_send_mode_alarm" />
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/listOptionsLocationSource"
            android:entryValues="@array/listValuesLocationSource"
            android:key="P2LocationSource"
            android:summary="%s"
            android:title="@string/location_source" />
        <ListPreference
            android:defaultValue="10"
            android:entries="@array/listOptionsLocationSendInterval"
            android:entryValues="@array/listValuesLocationSendInterval"
            android:key="P2GPSUpdateInterval"
            android:summary="%s"
            android:title="@string/gps_update_interval" />
    </PreferenceCategory>

</PreferenceScreen>